<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:backgroundTint="@color/cardBackground"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/source"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/accountTv"
                android:textIsSelectable="true"/>
            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/passwordTv"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>